<resources>
<string name="app_name">NerdHerd</string>

<!-- Initial page-->
<string name="login">Login</string>
<string name="signup">Sign-up</string>

<!-- Sign-up Page -->

<!-- Reset Password Page -->
<string name="reset_password">Reset Password</string>
<string name="su_new_password">Enter New Password</string>
<string name="su_confirm_new_password">Confirm New Password</string>
<!-- Enter Code Page -->
<string name="enter_code">Enter Code</string>

<!-- Main Page -->
<string name="hello_name">Hello Name</string>
    <string name="display_weight">Weight: ______(pounds)______</string>
    <string name="display_height">Height: ______(inches)______</string>
    <string name="display_hypertension_risk">Risk of Hypertension?: ____(Yes/No)____</string>
    <string name="stress_bar">Stress Level: </string>
<!-- Sign-up categories-->
<string name="su_full_name">Full Name</string>
<string name="su_email">Email</string>
<string name="su_confirm_email">Confirm Email</string>
<string name="su_password">Password</string>
<string name="su_confirm_password">Confirm Password</string>
<string name="su_race">Race</string>
<string name="su_weight">Weight</string>
<string name="su_height">Height</string>
<string name="su_age">Age</string>
<string name="su_gender">Gender</string>
<string name="su_smoke_hist">Do you have a history of smoking?</string>
<string name="su_diabetes_hist">Do you or your immediate family have a history of diabetes?</string>
<string name="su_hypertension_hist">Do you or your immediate family have a history of hypertension?</string>
<string name="su_chronic_kidney_hist">Do you or your immediate family have a history of chronic kidney disease?</string>
<string name="su_adrenal_disorder_hist">Do you or your immediate family have a history of adrenal disorders?</string>
<string name="su_thyroid_disorder_hist">Do you or your immediate family have a history of thyroid disorders?</string>
<string name="su_birth_control">Are you currently taking any form of birth control?</string>
<string name="su_activity_level">Are you currently active for at least 1 hour per day?</string>
<string name="su_sleep_apnea_hist">Do you currently or have you ever suffered from sleep apnea?</string>
<string name="su_pregnant">Are you currently pregnant?</string>
<string name="su_alcohol_consumption">Do you consume alcohol more than 7 times per week?</string>
<string name="su_sleep_duration">Do you sleep for at least 6-8 hours per day?</string>
<string name="su_terms_of_agreement">Do you agree to allowing Smart Heart to use your personal health data for the purposes of this app?</string>

<!-- Sign-up hints -->
<string name="su_full_name_hint">Enter full name here</string>
<string name="su_email_hint">Enter email address here</string>
<string name="su_confirm_email_hint">Confirm email address here</string>
<string name="su_password_hint">Enter password here</string>
<string name="su_confirm_password_hint">Confirm password here</string>
<string name="su_weight_hint">Enter your weight (lbs.) here</string>
<string name="su_height_hint">Enter your height (inches) here</string>
<string name="su_age_hint">Enter your age here</string>
    <string name="su_enter_code_hint">Enter the code here</string>

<!-- Radio Buttons -->
<string name="btn_male">Male</string>
<string name="btn_female">Female</string>
<string name="btn_yes">Yes</string>
<string name="btn_no">No</string>

<!-- Drop down Menus -->
<string-array name="races">
    <item>White (Not Hispanic or Latino)</item>
    <item>Native Hawaiian or Other Pacific Islander (Not Hispanic or Latino)</item>
    <item>American Indian or Native Alaskan (Not Hispanic or Latino)</item>
    <item>Asian (Not Hispanic or Latino)</item>
    <item>Hispanic or Latino</item>
    <item>Black or African American (Not Hispanic or Latino)</item>
    <item>Two or more races</item>
</string-array>
</resources>
