<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:gravity="center"
        android:textSize="30sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="28sp"
                android:padding="8dp"
                android:text="@string/su_email"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/su_email_hint"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:id="@+id/email"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="28sp"
                android:padding="8dp"
                android:text="@string/su_confirm_email"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/su_confirm_email_hint"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:id="@+id/confirm_email"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Send Verification Code"
                android:layout_gravity="center_horizontal"
                android:paddingTop="8dp"
                android:textSize="24sp"
                android:id="@+id/verification_btn"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>